<resources>
    <string name="app_name">Country Traveller</string>
    <string name="country_info">You can get the info about world\'s all countries!</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="oops_something">OOPS something went wrong</string>
    <string name="search_hint">Search Countries</string>
    <string name="name">Name</string>
    <string name="languages">Languages</string>
    <string name="currency">Currency</string>
    <string name="capital">Capital</string>
    <string name="population">Population</string>
</resources>