<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:isScrollContainer="false"
            android:background="@color/splash_bg_color"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/splash_bg_color"
                android:orientation="vertical"
                >
                <ImageView
                    android:id="@+id/flagImage"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@color/splash_bg_color"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="10dp"
                    android:scaleType="fitCenter"
                    android:layout_marginEnd="10dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:background="@color/splash_bg_color"
                    android:layout_gravity="center"
                    android:fontFamily="@font/josefinsans_bold"
                    android:gravity="center"
                    android:text="@string/name"
                    android:textColor="@color/theme_primary_font_color"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/nameTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/josefinsans_light"
                    android:gravity="center"
                    android:background="@color/splash_bg_color"
                    android:layout_marginTop="5dp"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/splash_bg_color"
                    android:layout_gravity="center"
                    android:fontFamily="@font/josefinsans_bold"
                    android:gravity="center"
                    android:text="@string/capital"
                    android:textColor="@color/theme_primary_font_color"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/capitalTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/josefinsans_light"
                    android:gravity="center"
                    android:background="@color/splash_bg_color"
                    android:layout_marginTop="5dp"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/josefinsans_bold"
                    android:gravity="center"
                    android:background="@color/splash_bg_color"
                    android:text="@string/languages"
                    android:textColor="@color/theme_primary_font_color"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/languageTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/josefinsans_light"
                    android:gravity="center"
                    android:background="@color/splash_bg_color"
                    android:layout_marginTop="5dp"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/josefinsans_bold"
                    android:gravity="center"
                    android:background="@color/splash_bg_color"
                    android:text="@string/currency"
                    android:textColor="@color/theme_primary_font_color"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/currencyTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/josefinsans_light"
                    android:gravity="center"
                    android:background="@color/splash_bg_color"
                    android:layout_marginTop="5dp"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/josefinsans_bold"
                    android:gravity="center"
                    android:text="@string/population"
                    android:background="@color/splash_bg_color"
                    android:textColor="@color/theme_primary_font_color"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/populationTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/josefinsans_light"
                    android:gravity="center"
                    android:background="@color/splash_bg_color"
                    android:layout_marginTop="5dp"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <!--<Button
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/theme_primary_font_color"
                    android:fontFamily="@font/josefinsans_bold"
                    android:text="Close"
                    android:onClick="@{countryDetailVM::onCloseClick}"
                    android:textColor="@color/splash_bg_color"/>-->

            </LinearLayout>
        </ScrollView>
</layout>